# dmptool-works-matching

./: .dockerignore  .env.aws-batch.example  .env.aws.example  .env.batch-submit.example  .env.local.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.aws  Dockerfile.batch  Dockerfile.builder  Dockerfile.lambda  LICENSE  Makefile  README.md  buildspec.yaml  deny.toml  docker-compose.yml  migrate_release_date.py  pyproject.toml  renovate.json
.github/workflows/: ci.yml
docs/: architecture.md  aws-batch.md  aws-deployment.md  cloud-formation.md  development.md  running-locally.md  troubleshooting.md
docs/aws/: README.md  architecture.md  batch.md  deployment.md  dynamodb-data-model.md  pipeline.md
infra/: buildspec.yaml  lambda-config.yaml.example  vars-dev.yaml.example  vars-stg.yaml.example
infra/config/: config.yaml
infra/config/dev/: batch-jobs.yaml  chatbot.yaml  codestar.yaml  config.yaml  s3.yaml  scheduler.yaml
infra/config/dev/codebuild/: dmpworks.yaml
infra/config/dev/codepipeline/: dmpworks.yaml
infra/config/stg/: batch-jobs.yaml  batch-platform.yaml  chatbot.yaml  config.yaml  dynamodb.yaml  ecr.yaml  s3.yaml  scheduler.yaml
infra/config/stg/codebuild/: dmpworks.yaml
infra/config/stg/codepipeline/: dmpworks.yaml
infra/templates/: batch-jobs.yaml  batch-jobs.yaml.j2  batch-platform.yaml.j2  chatbot.yaml  codestar.yaml  dynamodb.yaml  dynamodb.yaml.j2  ecr.yaml.j2  s3.yaml.j2  scheduler.yaml.j2
infra/templates/codebuild/: dmpworks.yaml
infra/templates/codepipeline/: dmpworks.yaml
infra/templates/state_machines/dataset_ingest_workflow/: dataset_ingest_workflow.asl.json  dataset_ingest_workflow.md  download_workflow.asl.json  subset_workflow.asl.json  transform_workflow.asl.json
infra/templates/state_machines/process_dmps_workflow/: dmp_works_search_workflow.asl.json  enrich_dmps_workflow.asl.json  merge_related_works_workflow.asl.json  process_dmps_workflow.asl.json  sync_dmps_workflow.asl.json
infra/templates/state_machines/process_works_workflow/: process_works_workflow.asl.json  process_works_workflow.md  sqlmesh_workflow.asl.json  sync_works_workflow.asl.json
notebooks/: Relations.ipynb  Work Types.ipynb
python/dmpworks/: cli.py  cli_utils.py  constants.py  dataset_subset.py  transforms.py  utils.py
python/dmpworks/batch/: cli.py  crossref_metadata.py  data_citation_corpus.py  datacite.py  dmps.py  jobs.py  openalex_funders.py  openalex_works.py  opensearch.py  ror.py  sql.py  tasks.py  utils.py
python/dmpworks/batch_submit/: cli.py  job_factories.py  job_registry.py  jobs.py
python/dmpworks/dmsp/: cli.py  ground_truth.py  loader.py  merge.py  migration.py  rank_metrics.py  related_works.py  utils.py
python/dmpworks/funders/: award_id.py  nih_award_id.py  nih_funder_api.py  nsf_award_id.py  nsf_funder_api.py  parser.py
python/dmpworks/model/: common.py  dataset_version_model.py  dmp_model.py  related_work_model.py  work_model.py  zenodo_model.py
python/dmpworks/opensearch/: cli.py  cli_roles.py  dmp_search.py  dmp_works.py  dmp_works_search.py  enrich_dmps.py  index.py  learning_to_rank.py  query_builder.py  rank_metrics.py  roles.py  sync.py  sync_dmps.py  sync_works.py  utils.py
python/dmpworks/opensearch/mappings/: dmps-mapping.json  works-mapping.json
python/dmpworks/pipeline/: aws.py  cli.py  display.py  interactive.py  s3.py
python/dmpworks/rust/: __init__.py  _internal.pyi
python/dmpworks/scheduler/: batch_params.py  config.py  dynamodb_store.py  s3_cleanup.py  version_checker.py
python/dmpworks/scheduler/handler/: __init__.py  check_datasets_ready_handler.py  create_process_dmps_run_handler.py  create_process_works_run_handler.py  generate_child_run_id_handler.py  get_batch_job_params_handler.py  handle_execution_failure_handler.py  s3_cleanup_handler.py  set_process_dmps_run_status_handler.py  set_process_works_run_status_handler.py  set_release_status_handler.py  set_task_run_complete_handler.py  start_execution.py  start_process_dmps_handler.py  start_process_works_handler.py  store_approval_token_handler.py  version_checker_handler.py
python/dmpworks/sql/: cli.py  commands.py  config.yaml
python/dmpworks/sql/audits/: assert_max_array_length.sql
python/dmpworks/transform/: cli.py  crossref_metadata.py  datacite.py  dataset_subset.py  dmp.py  openalex_works.py  pipeline.py  simdjson_transforms.py  transforms.py  utils_file.py
src/: core.rs  lib.rs
tests/: aws_test_env.py  conftest.py  utils.py
tests/dmpworks/: test_cli.py  test_utils.py
tests/dmpworks/batch/: conftest.py  test_cli.py  test_crossref_metadata.py  test_dataset_subset.py
tests/dmpworks/batch_submit/: conftest.py  test_cli.py  test_job_factories.py  test_job_registry.py  test_jobs.py
tests/dmpworks/dmp/: test_dmp.py
tests/dmpworks/dmsp/: conftest.py  test_cli.py  test_loader.py  test_merge.py  test_related_works.py
tests/dmpworks/e2e/: conftest.py  test_pipeline.py
tests/dmpworks/funders/: test_nih_award_id.py  test_nih_funder_api.py  test_nsf_award_id.py  test_nsf_funder_api.py
tests/dmpworks/model/: test_common.py
tests/dmpworks/opensearch/: test_cli.py  test_dmp_works_search.py  test_rank_metrics.py  test_roles.py
tests/dmpworks/pipeline/: test_aws.py  test_cli.py  test_display.py
tests/dmpworks/rust/: test_rust.py
tests/dmpworks/scheduler/: conftest.py  test_batch_params.py  test_dataset_ingest_workflow.py  test_dynamodb_store.py  test_s3_cleanup.py  test_state_machine.py  test_version_checker.py
tests/dmpworks/sql/: test_cli.py
tests/dmpworks/transform/: test_cli.py  test_simdjson_transforms.py
tests/fixtures/: _pubmed_ids_to_dois.yaml  find_crossref_doi.yaml  find_datacite_doi.yaml  nih_award_id_e2e.yaml  nih_fetch_award_publication_dois.yaml  nsf_award_id_e2e.yaml  nsf_fetch_org_id.yaml
tests/fixtures/e2e/: README.md  build_fixtures.py  dois.txt
tests/fixtures/funders/: nih_core_project_to_appl_ids.yaml  nsf_award_id_e2e.yaml  pubmed_ids_to_dois_batch.yaml
tests/fixtures/scheduler/: crossref_versions.yaml  datacite_status.yaml  dcc_zenodo.yaml  openalex_manifest.yaml  ror_zenodo.yaml
(+104 files in other folders)
