[package]
name = "dmpworks-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "dmpworks_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py39"] }
human_name = "2.0.4"
strip-tags = "0.1.0"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0.149"